@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.6.13) unstable; urgency=low
   * cookie-server: fix parsing multiple cookies
   * http-cache-memcached: clean up expired "choice" items
   * sink-gstring: use callback instead of public struct
+  * istream-tee: restart reading when one output is closed
 
  --
 
